--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          Linkedin<i class=" fab fa-linkedin"></i>
       </a>
       
-      <a href=#' class='whatsapp' target='_blank'>
+      <a href=https://api.whatsapp.com/send?phone=+918824944809' class='whatsapp' target='_blank'>
       8824944809<i class="fab fa-whatsapp-square"></i></a>
   
   </div>
