--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <div id="preview">
             <div id="corner-tl" class="corner"></div>
             <div id="corner-tr" class="corner"></div>
-            <h3>What I do</h3>
-            <p>I am a web Developer and <br>design Website</p>
+            <h3>What I like?</h3>
+            <p>I like  Web Development <br>Data Analytics and <br> Software Development</p>
             <div id="corner-br" class="corner"></div>
             <div id="corner-bl" class="corner"></div>
           </div>
@@ -105,11 +105,11 @@
                  <li>HTML</li>
                  <li>CSS</li>
                  <li>Bootstrap</li>
+                 <li>JavaScript</li>
                </ul>
                <ul>
                  <li>SQL</li>
                  <li>Salesforce</li>
-                 <li>Java Script</li>
                  <li>Pyhton</li>
                  <li>Excel</li>
                </ul>
