--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a href='https://api.whatsapp.com/send?phone=+918824944809' class='whatsapp' target='_blank'>
       8824944809<i class="fab fa-whatsapp-square"></i></a>
                                                  
-      <a href='https://trailblazer.me/id/divyanshmathur' class='trailhead' target='_blank'>
+      <a href='https://trailblazer.me/id/divyanshmathur' class='Trailhead' target='_blank'>
       Trailhead profile <i class="fa fa-cloud" aria-hidden="true"></i><a>
   
   </div>
