--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div id="corner-tl" class="corner"></div>
             <div id="corner-tr" class="corner"></div>
             <h3>What I like?</h3>
-            <p>I like  Web Development <br>Data Analytics and <br> Software Development</p>
+            <p>I like to work on Salesforce Platform   <br>and iam an AWS cloud enthusiast.</p>
             <div id="corner-br" class="corner"></div>
             <div id="corner-bl" class="corner"></div>
           </div>
@@ -109,10 +109,10 @@
                  <li>HTML</li>
                  <li>CSS</li>
                  <li>Bootstrap</li>
-                 <li>JavaScript</li>
+               
                </ul>
                <ul>
-                 <li>SQL</li>
+              
                  <li>Salesforce</li>
                  <li>Pyhton</li>
                  <li>Excel</li>
