--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div id="corner-tl" class="corner"></div>
             <div id="corner-tr" class="corner"></div>
             <h3>What I like?</h3>
-            <p>I like to work on Salesforce Platform   <br>and iam an AWS cloud enthusiast.</p>
+            <p>I am a person with keen interest in Web Development   <br>and i have sound knowledge of Salesforce.</p>
             <div id="corner-br" class="corner"></div>
             <div id="corner-bl" class="corner"></div>
           </div>
